--- a/Pages/Examene/Create.cshtml
+++ b/Pages/Examene/Create.cshtml
@@ -34,7 +34,7 @@
                 <span asp-validation-for="Examen.DataExamen" class="textdanger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Examen.Data_ExID" class="control-label">Data Examen</label>
+                <label asp-for="Examen.Data_ExID" class="control-label">Dati de examen</label>
                 <select asp-for="Examen.Data_ExID" class="form-control" asp-items="ViewBag.Data_ExID">
                 </select>
                 <span asp-validation-for="Examen.Data_ExID" class="text-danger"></span>
