--- a/Pages/Examene/Edit.cshtml
+++ b/Pages/Examene/Edit.cshtml
@@ -35,7 +35,7 @@
                 <span asp-validation-for="Examen.DataExamen" class="textdanger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Examen.Data_ExID" class="control-label">Publisher Name</label>
+                <label asp-for="Examen.Data_ExID" class="control-label">Dati de examen</label>
                 <select asp-for="Examen.Data_ExID" class="form-control" asp-items="ViewBag.PublisherID">
                 </select>
                 <span asp-validation-for="Examen.Data_ExID" class="text-danger"></span>
