--- a/Pages/Examene/Create.cshtml
+++ b/Pages/Examene/Create.cshtml
@@ -34,10 +34,10 @@
                 <span asp-validation-for="Examen.DataExamen" class="textdanger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Examen.Data_ExID" class="control-label">Dati de examen</label>
-                <select asp-for="Examen.Data_ExID" class="form-control" asp-items="ViewBag.Data_ExID">
+                <label asp-for="Examen.ProfesorCursID" class="control-label">Nume profesor titular curs</label>
+                <select asp-for="Examen.ProfesorCursID" class="form-control" asp-items="ViewBag.ProfesorID">
                 </select>
-                <span asp-validation-for="Examen.Data_ExID" class="text-danger"></span>
+                <span asp-validation-for="Examen.ProfesorCursID" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
