--- a/Pages/Examene/Edit.cshtml
+++ b/Pages/Examene/Edit.cshtml
@@ -34,11 +34,11 @@
                 <input asp-for="Examen.DataExamen" class="form-control" />
                 <span asp-validation-for="Examen.DataExamen" class="textdanger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Examen.Data_ExID" class="control-label">Dati de examen</label>
-                <select asp-for="Examen.Data_ExID" class="form-control" asp-items="ViewBag.PublisherID">
+              <div class="form-group">
+       <label asp-for="Examen.ProfesorCursID" class="control-label">Nume profesor titular curs</label>
+                <select asp-for="Examen.ProfesorCursID" class="form-control" asp-items="ViewBag.ProfesorID">
                 </select>
-                <span asp-validation-for="Examen.Data_ExID" class="text-danger"></span>
+                <span asp-validation-for="Examen.ProfesorCursID" class="text-danger"></span>
             </div>
          
             <div class="form-group">
