--- a/Pages/ProfesoriCurs/Create.cshtml
+++ b/Pages/ProfesoriCurs/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Ropot_Anastasia.Pages.DateDeExamen.CreateModel
+@model Ropot_Anastasia.Pages.ProfesoriCurs.CreateModel
 
 @{
     ViewData["Title"] = "Create";
@@ -7,16 +7,16 @@
 
 <h1>Create</h1>
 
-<h4>Data_Ex</h4>
+<h4>ProfesorCurs</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Data_Ex.Dati_de_examen" class="control-label"></label>
-                <input asp-for="Data_Ex.Dati_de_examen" class="form-control" />
-                <span asp-validation-for="Data_Ex.Dati_de_examen" class="text-danger"></span>
+                <label asp-for="ProfesorCurs.Nume_ProfesorCurs" class="control-label"></label>
+                <input asp-for="ProfesorCurs.Nume_ProfesorCurs" class="form-control" />
+                <span asp-validation-for="ProfesorCurs.Nume_ProfesorCurs" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
