--- a/Pages/ProfesoriCurs/Delete.cshtml
+++ b/Pages/ProfesoriCurs/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Ropot_Anastasia.Pages.DateDeExamen.DeleteModel
+@model Ropot_Anastasia.Pages.ProfesoriCurs.DeleteModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -9,19 +9,19 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Data_Ex</h4>
+    <h4>ProfesorCurs</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Data_Ex.Dati_de_examen)
+            @Html.DisplayNameFor(model => model.ProfesorCurs.Nume_ProfesorCurs)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Data_Ex.Dati_de_examen)
+            @Html.DisplayFor(model => model.ProfesorCurs.Nume_ProfesorCurs)
         </dd>
     </dl>
     
     <form method="post">
-        <input type="hidden" asp-for="Data_Ex.ID" />
+        <input type="hidden" asp-for="ProfesorCurs.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-page="./Index">Back to List</a>
     </form>
