--- a/Pages/ProfesoriCurs/Edit.cshtml
+++ b/Pages/ProfesoriCurs/Edit.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model Ropot_Anastasia.Pages.DateDeExamen.EditModel
+@model Ropot_Anastasia.Pages.ProfesoriCurs.EditModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -7,17 +7,17 @@
 
 <h1>Edit</h1>
 
-<h4>Data_Ex</h4>
+<h4>ProfesorCurs</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="Data_Ex.ID" />
+            <input type="hidden" asp-for="ProfesorCurs.ID" />
             <div class="form-group">
-                <label asp-for="Data_Ex.Dati_de_examen" class="control-label"></label>
-                <input asp-for="Data_Ex.Dati_de_examen" class="form-control" />
-                <span asp-validation-for="Data_Ex.Dati_de_examen" class="text-danger"></span>
+                <label asp-for="ProfesorCurs.Nume_ProfesorCurs" class="control-label"></label>
+                <input asp-for="ProfesorCurs.Nume_ProfesorCurs" class="form-control" />
+                <span asp-validation-for="ProfesorCurs.Nume_ProfesorCurs" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
